Working on overall structure and CH_05 examples